# mlops-ts-project

./: Dockerfile  Dockerfile.local  README.md  cloudbuild.yaml  cloudbuild_requirements.txt  docker-compose.yaml  pyproject.toml
post/: blog_post.md  data.py
post/assets/: references.txt
scripts/: mypy.ini  serve.py  tooling.py
src/: __main__.py  dataset.py
src/experiments/: darts.ipynb
src/libs/config/: constants.py  logger.py
src/libs/db/: connection.py  flowtraced_data.py
src/libs/storage/: utils.py
src/model/: Dockerfile.evaluation  Dockerfile.training  cloudbuild.evaluation.yaml  cloudbuild.predict.yaml  cloudbuild.training.yaml  data.py  evaluation.py  predict.py  training.py
src/model/_tmp/: DK-DK1.pkl
