[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pierre Segonne <pierre.segonne@tmrow.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
pystan = "2.19.1.1"
prophet = "^1.0.1"
darts = "^0.19.0"
black = "^22.3.0"
isort = "^5.10.1"
toml = "^0.10.2"
snapshottest = "^0.6.0"
pytest = "^7.1.1"
pylint = "^2.13.7"
nbqa = "^1.3.1"
mypy = "^0.942"
arrow = "^1.2.2"
Flask = "^2.1.1"
psycopg2 = "^2.9.3"
google-cloud-secret-manager = "^2.10.0"
colorlog = "^6.6.0"
google-cloud-logging = "^3.0.0"
google-cloud-storage = "^2.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[tool.poetry.scripts]
format = 'scripts.tooling:format'
lint = 'scripts.tooling:lint'
test = 'scripts.tooling:test'
test_watch = 'scripts.tooling:test_watch'
typecheck = 'scripts.tooling:typecheck'
check = 'scripts.tooling:check'
start = 'src.__main__:develop'
serve = 'scripts.serve:serve_dev'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
